k8s/curtin-courses/01-cc-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curtin-courses
  namespace: imjacinta
spec:
  selector:
    matchLabels:
      run: curtin-courses
      tier: app
  template:
    metadata:
      labels:
        run: curtin-courses
        tier: app
    spec:
      containers:
      - name: curtin-courses
        image: jaci/curtin-courses:66cc100
        args: [bundle, exec, rails, s, "-p", "3000", "-b", "0.0.0.0"]
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: gcs
          mountPath: /etc/gcs
          readOnly: true
      volumes:
      - name: gcs
        secret:
          secretName: gcs-creds
