k8s/curtin-courses/03-cc-sidekiq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: curtin-courses-sidekiq
  namespace: web
spec:
  selector:
    matchLabels:
      run: curtin-courses-sidekiq
      tier: back
  template:
    metadata:
      labels:
        run: curtin-courses-sidekiq
        tier: back
    spec:
      containers:
      - name: curtin-courses-sidekiq
        image: jaci/curtin-courses:66cc100
        args: [bundle, exec, sidekiq]
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: gcs
          mountPath: /etc/gcs
          readOnly: true
      volumes:
      - name: gcs
        secret:
          secretName: gcs-creds
