k8s/curtin-courses/02-cc-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: curtin-courses
  namespace: web
spec:
  ports:
  - port: 3000
  selector:
    run: curtin-courses
    tier: app
  type: ClusterIP
